# qmlTrojita

./: CMakeLists.txt  LICENSE  README  build.sh  manifest.json  package.sh  qmltrojita.desktop  run.sh  ubuntu-emailclient-app.desktop
debian/: changelog  control  copyright  ubuntu-emailclient-app.install
src/: CMakeLists.txt  mailBackend.cpp  mailBackend.h  main.cpp  qmltrojita.cpp  qmltrojita.h  ubuntu-emailclient-app.cpp  ubuntu-emailclient-app.h
src/plugin/: CMakeLists.txt  alert.cpp  alert.h  attachments.cpp  attachments.h  mailAddress.cpp  mailAddress.h  mailBox.cpp  mailBox.h  messageDetails.cpp  messageDetails.h  messages.cpp  messages.h  network.cpp  network.h  sendmail.cpp  sendmail.h  settings.cpp  settings.h
src/qml/: ubuntu-emailclient-app.qml
src/qml/components/: DeletePopover.qml  FirstUseDialog.qml  HintPopover.qml  MailAddressBox.qml  MailAddressPopover.qml  MarkPopover.qml  MessageDialog.qml  ReplyPopover.qml  SelectContactSheet.qml  SendStatusDialog.qml  SwitchAccountPopover.qml  ToolbarShadow.qml
src/qml/js/: MailConfig.js
src/qml/ui/: ComposePage.qml  FoldersPage.qml  MailBoxPage.qml  MessagePage.qml  SettingsPage.qml  Style.qml
src/trojita/: CMakeLists.txt
src/trojita/src/Gui/: SimplePartWidget.cpp.~1~  Window.h
src/trojita/src/Imap/Model/: MailboxModel.cpp  MailboxModel.h  MailboxTree.cpp  MailboxTree.h  Model.cpp  Model.h  TaskFactory.cpp
src/trojita/src/Imap/Tasks/: GetAnyConnectionTask.cpp  ListChildMailboxesTask.cpp  OpenConnectionTask.cpp
src/trojita/src/Streams/: FakeSocket.cpp
